test-container.yaml
apiVersion: v1
kind: Pod
metadata:
  name: workload-identity-test
  namespace: wordpress-app
spec:
  containers:
  - image: google/cloud-sdk:slim
    name: workload-identity-test
    command: ["sleep","infinity"]
  serviceAccountName: wordpress-sa
  nodeSelector:
    iam.gke.io/gke-metadata-server-enabled: "true"
