wp-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-service
  namespace: wordpress-app
spec:
  selector:
    app: wordpress
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-deployment
  namespace: wordpress-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
      annotations:
        gke-gcsfuse/volumes: "true"
        gke-gcsfuse/cpu-limit: 50m
        gke-gcsfuse/memory-limit: 100Mi
    spec:
      serviceAccountName: wordpress-sa
      automountServiceAccountToken: true     
      containers:
        - name: wordpress
          image: wordpress:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: gcs-volume
              mountPath: /var/www/html/wp-content/uploads
      volumes:
        - name: cloudsql-instance-credentials
          emptyDir: {}
        - name: gcs-volume
          csi:
            driver: gcsfuse.csi.storage.gke.io
            volumeAttributes:
              bucketName: wp-datas
              mountOptions: "implicit-dirs,uid=33,gid=33"
