ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mjozsef-domain-ingress
  namespace: wordpress-app
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - project.mjozsef.hu
    secretName: project-mjozsef-tls
  rules:
  # - host: "monitor.mjozsef.hu"
  #   http:
  #     paths:
  #     - pathType: Prefix
  #       path: "/"
  #       backend:
  #         service:
  #           name: prometheus-grafana
  #           port:
  #             number: 80
  - host: "project.mjozsef.hu"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: wordpress-service
            port:
              number: 80
